feat: communicate ‘ServiceStatus.Progress’ as a separate field
