# nix/lace-blockchain-services/internal/lace-blockchain-services/types/types.go
@@ -3,9 +3,10 @@ package types
 type NetworkMagic int
 
 type ServiceStatus struct {
-	ServiceName string `json:"serviceName"`
-	Status      string `json:"status"`
-	Url         string `json:"url"`
-	Version     string `json:"version"`
-	Revision    string `json:"revision"`
+	ServiceName string  `json:"serviceName"`
+	Status      string  `json:"status"`
+	Progress    float64 `json:"progress"`
+	Url         string  `json:"url"`
+	Version     string  `json:"version"`
+	Revision    string  `json:"revision"`
 }
